--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Countries" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/images/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Countries</title>
   <link href="/src/styles.css" rel="stylesheet">
-
 </head>
 
 <body>
